--- a/NotificationsWeb/appsettings.json
+++ b/NotificationsWeb/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=x;Initial Catalog=x;Persist Security Info=False;User ID=x;Password=x;Connection Timeout=30;"
+  }
 }
